[package]
name = "hvac-rs"
version = "0.1.0"
edition = "2021"
authors = ["rehn.andreas86@gmail.com"]

[lib]
name = "hvaclib"
path = "src/lib.rs"


[[bin]]
name = "hvac"
path = "src/app/main.rs"

[dependencies]
log = {version = "0.4", default-features = false}
pretty_env_logger = {version = "0.5", default-features = false}

[profile.release]
opt-level = "z"        # Optimize for speed.
lto = "thin"           # Enable Link Time Optimization
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
debug = false
overflow-checks = true
strip = "debuginfo"
