[package]
name = "hvac-rs"
version = "0.1.0"
edition = "2021"
authors = ["rehn.andreas86@gmail.com"]

[lib]
name = "hvaclib"
path = "src/lib.rs"
doc = true

[[bin]]
name = "hvac"
path = "src/app/main.rs"
doc = false

[dependencies]
axum = { version = "=0.7.4", default-features = false, features = [
    "tokio",
    "json",
    "http2"
] }
config = {version = "0.14", default-features = false, features = ["toml"]}
influx_db_client = {version = "0.5.1", default-features = false, features = ["rustls-tls"]}
log = {version = "0.4"}
pretty_env_logger = {version = "0.5"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39.2", features =[
    "macros",
    "rt-multi-thread",
    "signal",
] }

[dev-dependencies]
axum-test-helper = "0.4.0"

[profile.release]
opt-level = "z"        # Optimize for speed.
lto = "thin"           # Enable Link Time Optimization
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
debug = false
overflow-checks = true
strip = "debuginfo"
